[SC-12570] - Fix wrapping text in Email Editor

--- a/src/app/crm/shared/email-template-dialog/email-template-dialog.component.less
+++ b/src/app/crm/shared/email-template-dialog/email-template-dialog.component.less
@@ -152,6 +152,8 @@
             overflow-y: auto;
         }
         .ck-editor__editable_inline {
+            padding: 0 15px;
+            white-space: break-spaces;
             min-height: calc(100vh - 420px);
         }
     }
